--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rush Music Sampler</title>
+    <title>Rush: Defying the Status Quo</title>
 </head>
 <body>
     <h1>Rush: Defying the Status Quo</h1>
@@ -29,4 +29,5 @@
         <source src="audio/workingmansample.mp3" type="audio/mp3"> 
 	    <source src="audio/workingmansample.ogg" type="audio/ogg"> 
     </audio>
+    <footer>Christopher De Cara is the creator of this page, "Rush: Defying the Status Quo." View <a href="https://github.com/chrisdecara/music-sampler">the Github repo</a> for this page here.</footer>
 </body>
