adding html tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,4 +31,6 @@
 	    <source src="audio/workingmansample.ogg" type="audio/ogg"> 
     </audio>
     <footer>Christopher De Cara is the creator of this page, "Rush: Defying the Status Quo." View <a href="https://github.com/chrisdecara/music-sampler">the Github repo</a> for this page here.</footer>
+    <script></script>
 </body>
+</html>
