--- a/index.html
+++ b/index.html
@@ -10,27 +10,39 @@
     <img src="images/rushband.jpg" alt="Rush at a Concert in 2012">
     <p><a href="https://commons.wikimedia.org/wiki/File:Rush_September_9_2012_at_Jiffy_Lube_Live_Bristow_VA_-_Washington_DC_(7988529933).jpg">Mark Taylor from Rockville, USA</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
     <p>If you have yet to stumble upon the absolute monolith of a band known as <em>Rush</em>, allow me to introduce you to one of the most influential and iconic bands of the last century! Since their debut in 1974, <em>Rush</em> has actively put out multiple albums a decade, only ceasing in 2015 following the death of one of its members.</p><p>To many, <em>Rush</em> reminds people of a time that, despite not being all that long ago, feels like a drastically different world than that of the modern day. Many of the band's songs focus on ideas of rebellion, denying social norms and seeking out individualism in an increasingly corporate world.</p><p>The following four song samples ("Subdivisions," "Limelight," "A Passage to Bangkok" and "Working Man") are some of the most well-known and celebrated works in their entirey discography.</p>
-    <img src="images/subdivisions.jpg" alt="The Rush Album 'Signals'">
-    <img src="images/movingpictures.jpg" alt="The Rush Album 'Moving Pictures'">
-    <img src="images/2112.jpg" alt="The Rush Album '2112'">
-    <img src="images/rush.jpg" alt="The First Rush Album">
+    <img id="signalsAlbumCover" class="album-cover" src="images/subdivisions.jpg" alt="The Rush Album 'Signals'">
+    <img id="movingPicturesAlbumCover" class="album-cover" src="images/movingpictures.jpg" alt="The Rush Album 'Moving Pictures'">
+    <img id="2112AlbumCover" class="album-cover" src="images/2112.jpg" alt="The Rush Album '2112'">
+    <img id="rushAlbumCover" class="album-cover" src="images/rush.jpg" alt="The First Rush Album">
+    <div id="subdivisionsPlayer" class="player">
     <audio id="subdivisions" controls preload="auto">
         <source src="audio/subdivisionssample.mp3" type="audio/mp3"> 
 	    <source src="audio/subdivisionssample.ogg" type="audio/ogg"> 
     </audio>
+    <p>Subdivisions</p>
+    </div>
+    <div id="limelightPlayer" class="player">
     <audio id="limelight" controls preload="auto">
         <source src="audio/limelightsample.mp3" type="audio/mp3"> 
 	    <source src="audio/limelightsample.ogg" type="audio/ogg"> 
     </audio>
-    <audio id="apassagetobangkok" controls preload="auto">
+    <p>Limelight</p>
+    </div>
+    <div id="aPassageToBangkokPlayer" class="player">
+    <audio id="aPassageToBangkok" controls preload="auto">
         <source src="audio/apassagetobangkoksample.mp3" type="audio/mp3"> 
 	    <source src="audio/apassagetobangkoksample.ogg" type="audio/ogg"> 
     </audio>
-    <audio id="workingman" controls preload="auto">
+    <p>A Passage to Bangkok</p>
+    </div>
+    <div id="workingManPlayer" class="player">
+    <audio id="workingMan" controls preload="auto">
         <source src="audio/workingmansample.mp3" type="audio/mp3"> 
 	    <source src="audio/workingmansample.ogg" type="audio/ogg"> 
     </audio>
+    <p>Working Man</p>
+    </div>
     <footer>Christopher De Cara is the creator of this page, "Rush: Defying the Status Quo." View <a href="https://github.com/chrisdecara/music-sampler">the Github repo</a> for this page here.</footer>
-    <script></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
