potential final commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <div id="centerMe">
     <h1>Rush: Defying the Status Quo</h1>
+    </div>
     <img id="mainImage" src="images/rushband.jpg" alt="Rush at a Concert in 2012">
     <p id="caption"><a href="https://commons.wikimedia.org/wiki/File:Rush_September_9_2012_at_Jiffy_Lube_Live_Bristow_VA_-_Washington_DC_(7988529933).jpg">Mark Taylor from Rockville, USA</a>, <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a>, via Wikimedia Commons</p>
     <div id="introParagraph">
